# bmminer-mix

./: .gitignore  Makefile.am  Makefile.mk  cgminer.c  configure.ac  readme.txt  usbutils.c  usbutils.h  util.c
